# python-mongo-motor

./: .gitignore  README.en.md  README.es.md  README.md  env.example  main.py  pyproject.toml
data/seed/: sample_matches.json  teams.json
docker/: Dockerfile  docker-compose.yml
migrations/: __init__.py
migrations/versions/: 001_initial.py
src/: __init__.py
src/cli/: __init__.py  commands.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  connection.py  indexes.py
src/models/: __init__.py  analytics.py  base.py  match.py  prediction.py  user.py
src/repositories/: __init__.py  base.py  match_repository.py  prediction_repository.py  user_repository.py
src/services/: __init__.py  analytics_service.py  match_service.py  prediction_service.py  user_service.py
src/validators/: __init__.py  custom_types.py
tests/: __init__.py  conftest.py  test_models.py
